syntax = "proto3";

package app.v1;

import "google/api/annotations.proto";
import "protoc-gen-validate/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "kitty";

option (options.openapiv2_swagger) = {
  info: {
    title: "A kitty app";
    version: "1.0";
  };
  consumes: "application/json";
  produces: "application/json";
};

service App {
  rpc Login(UserLoginRequest) returns (UserLoginReply) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc GetCode(GetCodeRequest) returns (GenericReply) {
    option (google.api.http) = {
      get: "/v1/code"
    };
  }
//  rpc Code (EmptyRequest) returns (GenericReply) {
//    option (google.api.http) = {
//      get: "/v1/code"    // Loudness is accepted in the http path
//    };
//  }
}

message UserLoginRequest {
  string mobile = 1 [
    (validate.rules).string.pattern = "(^$|^[\\d]{13}$)",
    (options.openapiv2_field) = {pattern: "(^$|^[\\d]{13}$)"}
  ];
  string code = 2;
  string wechat = 3;
  Device device = 4;
  string channel = 5;
  string version_code = 6;
}

message Device {
  enum OS {
    OS_UNKNOWN = 0;
    IOS = 1;
    ANDROID = 2;
  }
  string imei = 1;
  string idfa = 2;
  string android_id = 3;
  string suuid = 4;
  string mac = 5;
  OS os = 6;
  string oaid = 7;
}

message UserLoginReply {
  uint64 id = 1;
  string user_name = 2;
  string wechat = 3;
  string head_img = 4;
  Gender gender = 5;
  string birthday = 6;
  string token = 7;
}

enum Gender {
  GENDER_UNKNOWN = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}

message GetCodeRequest {
  string mobile = 1 [
    (options.openapiv2_field) = {required: "true", pattern: "\\d{11}"},
    (validate.rules).string = {pattern: "\\d{11}"}
  ];
}

message UserInfoRequest {}

message EmptyRequest {

}

message GenericReply {
  int32 code = 1 [(gogoproto.jsontag) = "code"];
  string message = 2;
}

message UserRequest {
  string nick_name = 2 [(validate.rules).string = {max_len: 10}];
  string real_name = 3;
  string real_id = 4; // 身份证号

  enum Gender {
    // 未知
    UNKNOWN = 0;
    // 男
    MALE = 1;
    // 女
    FEMALE = 2;
  }

  Gender gender = 5;
  string autograph = 6;
  uint32 age = 7;
  string mobile = 8 [
    (options.openapiv2_field) = {
      description: "手机号"
    },
    (validate.rules).string.len = 5
  ] ;
  int32 code = 9 [(options.openapiv2_field) = {description: "验证码"}]; // 验证码
  string wechat_open_id = 10 [(options.openapiv2_field) = {description: "微信 openId"}];
  string qq_open_id = 11 [(.options.openapiv2_field) = {description: "QQ openId"}];
  map<string, string> third_party_ids = 12;
}
